--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </script>
   <script>
   if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("./service-worker.js");
+    navigator.serviceWorker.register("./service-worker.prod.js");
   }
   </script>
 </body>
